# quantum_sim

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Gate.h  Gates.h  InitialState.h  Matrix.h  QuantumBit.h  QuantumCircuit.h  RegularAmplitude.h
src/: BellState.cpp  Gate.cpp  InitialState.cpp  QuantumCircuit.cpp  QuantumTeleportation.cpp  run_quantum.cpp
